test/regress/coverage-amount-thousand-comma-period-err.test
; Coverage for amount.cc lines 1256-1257:
; "Incorrect use of thousand-mark comma" when a comma is detected as a
; decimal separator (because more than 3 digits follow it with no prior
; comma), but a period has already been seen. The period and comma
; placements are inconsistent.

2024/01/01 Test
    Expenses:Food    $1,2345.67
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 8:
While parsing posting:
  Expenses:Food    $1,2345.67
                   ^^^^^^^^^^
Error: Incorrect use of thousand-mark comma
end test
